--- a/views/game.html
+++ b/views/game.html
@@ -46,24 +46,15 @@
       <div class="money-resource-tracker">
         <h2>Money and Resource Tracker</h2>
         <button id="money-button">+ $$$</button><br />
-        <table id="money-resource-table">
-          <thead>
-            <tr>
-              <th id="money-col">$$$</th>
-              <th id="food-col">Food</th>
-              <th id="exercise-col">Exercise</th>
-              <th id="sleep-col">Sleep</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td id="money-val"></td>
-              <td id="food-val"></td>
-              <td id="exercise-val"></td>
-              <td id="sleep-val"></td>
-            </tr>
-          </tbody>
-        </table>
+        <thead>
+          <tr>
+            <th id="money-col">$$$</th>
+            <th id="food-col">Food</th>
+            <th id="exercise-col">Exercise</th>
+            <th id="sleep-col">Sleep</th>
+          </tr>
+        </thead>
+        <tbody id="tracker-table-body"></tbody>
       </div>
       <!-- Buy Critter -->
       <div class="buy-critter">
@@ -87,6 +78,7 @@
           </select>
           <br />
           <button id="buy-critter-button">Buy Critter (-$50)</button>
+          <p id="buyCritterFail"></p>
         </form>
       </div>
       <!-- Buy Resources -->
@@ -98,6 +90,12 @@
       </div>
     </main>
 
+    <br>
+    
+    <form action="/" method="GET">
+       <input type="submit" value="Logout"/>
+     </form>
+    
     <!-- Footer -->
     <footer>
       <p>A-Term 2023 Webware Final Project</p>
