Working buy resource buttons with proper functionality to not make money go negative

--- a/views/game.html
+++ b/views/game.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="js/main.js"></script>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link id="page-theme" rel="stylesheet" href="/css/sakura.css" />
     <link rel="stylesheet" href="css/accessible.css" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   </head>
