Critters in table

--- a/views/game.html
+++ b/views/game.html
@@ -44,6 +44,17 @@
             <li><button id="exercise-button">Exercise (+5)</button></li>
             <li><button id="sleep-button">Sleep (+1)</button></li>
           </ul>
+          
+          <table id="resultsTable">
+            <tr>
+              <th>Critter Name</th>
+              <th>Type</th>
+              <th>Life Points</th>
+              <th>Feed</th>
+              <th>Exercise</th>
+              <th>Sleep</th>
+            </tr>
+          </table>
         </div>
       </div>
       <!-- Money Resource Tracker -->
