--- a/views/game.html
+++ b/views/game.html
@@ -13,19 +13,23 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Critter Care</h1>
-      <h3>How to keep your critter alive:</h3>
-      <ol>
-        <li>Buy a critter</li>
-        <li>Use the clicker button to gain money</li>
-        <li>Use your money to buy things your critter needs to stay alive</li>
-        <li>Give your critter the resources to survive</li>
-        <li>Good luck!</li>
-      </ol>
-
-      <form action="/" method="GET">
+      <form id="logoutButton" action="/" method="GET">
         <input type="submit" value="Logout" />
       </form>
+      <h1>Critter Care</h1>
+      <img
+        id="pug-pic"
+        src="https://cdn.glitch.global/393e5abf-4650-448c-8842-bf58cc4433ca/charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg?v=1697113733508"
+        alt="Black pug wearing a sweater"
+      />
+      <p>How to keep your critter alive:</p>
+      <ol>
+        <li>Use the clicker button to gain money</li>
+        <li>Buy a critter</li>
+        <li>Use your money to buy things your critter needs to live</li>
+        <li>Give your critters the resources they need to survive</li>
+        <li>Good luck!</li>
+      </ol>
     </header>
 
     <!-- Main -->
