--- a/views/game.html
+++ b/views/game.html
@@ -77,7 +77,7 @@
       </div>
       <!-- Buy Critter -->
       <div class="buy-critter">
-        <form>
+        <form id="buy-critter-form">
           <h2>Buy a Critter</h2>
           <label for="critter-name" class="req">Critter name</label>
           <input
