--- a/views/createUser.handlebars
+++ b/views/createUser.handlebars
@@ -22,7 +22,7 @@
       <form action="/create" method="POST">
         <input type="text" name="username" placeholder="username" />
         <input type="password" name="password" placeholder="password" />
-        <input type="submit" value="create" />
+        <input type="submit" value="Create account" />
       </form>
       <p id="createAccountFail"></p>
       <form action="/" method="GET">
