--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
       <form action="/login" method="POST">
         <input type="text" name="username" placeholder="username" />
         <input type="password" name="password" placeholder="password" />
-        <input type="submit" value="login" />
+        <input type="submit" value="Login" />
         <p id="tocreateaccount">
           Don't have an account? Create one below.
         </p>
