--- a/views/game.html
+++ b/views/game.html
@@ -7,7 +7,7 @@
     <script src="js/main.js"></script>
     <link id="page-theme" rel="stylesheet" href="/css/sakura.css" />
     <link rel="stylesheet" href="css/accessible.css" />
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <link rel="icon" href="https://cdn.glitch.global/13057105-4ab8-4616-b6da-d9ed582fe1ad/pawprintheart.png?v=1697227776576" />
   </head>
 
   <body>
@@ -16,13 +16,18 @@
       <form id="logoutButton" action="/" method="GET">
         <input type="submit" value="Logout" />
       </form>
+      <img
+        id="paw-logo"
+        src="https://cdn.glitch.global/13057105-4ab8-4616-b6da-d9ed582fe1ad/pawprintheart.png?v=1697227776576"
+        alt="Paw Print"
+      />
       <h1>Critter Care</h1>
       <img
         id="pug-pic"
         src="https://cdn.glitch.global/393e5abf-4650-448c-8842-bf58cc4433ca/charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg?v=1697113733508"
         alt="Black pug wearing a sweater"
       />
-      <p>How to keep your critter alive:</p>
+      <p id="how-to">How to keep your critter alive:</p>
       <ol>
         <li>Use the clicker button to gain money</li>
         <li>Buy a critter</li>
