--- a/public/css/accessible.css
+++ b/public/css/accessible.css
@@ -1,9 +1,12 @@
+/* Accessibility considerations */
 .req:after {
   content: " *";
   color: red;
 }
+
+/* Sakura overriding for style purposes */
 footer {
-  margin-top: 5%;
+  margin-top: 10%;
 }
 #instructions {
   margin-bottom: 1%;
@@ -14,4 +17,43 @@ footer {
 #pug-pic {
   width: 25%;
   float: right;
+}
+#paw-logo {
+  width: 7.5%;
+  float: left;
+  padding-right: 1%;
+}
+#how-to {
+  margin-top: 4%;
+}
+
+/* Mobile view fixes */
+@media only screen and (max-device-width: 480px) {
+  button {
+    margin-bottom: 2.5%;
+    margin-top: 2.5%;
+  }
+  body {
+    width: 85%;
+  }
+  .critter {
+    width: 100%;
+    overflow-x: auto;
+  }
+  ol {
+    padding-left: 7.5%;
+  }
+  #pug-pic {
+    width: 40%;
+    padding: 2.5%;
+  }
+  #paw-logo {
+    width: 10%;
+    float: left;
+    padding-right: 1%;
+  }
+  #how-to {
+    margin-top: 5%;
+    margin-bottom: 2%;
+  }
 }
