--- a/views/createUser.handlebars
+++ b/views/createUser.handlebars
@@ -6,10 +6,15 @@
     <script src="js/main.js"></script>
     <link id="page-theme" rel="stylesheet" href="/css/sakura.css" />
     <link rel="stylesheet" href="css/accessible.css" />
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <link rel="icon" href="https://cdn.glitch.global/13057105-4ab8-4616-b6da-d9ed582fe1ad/pawprintheart.png?v=1697227776576" />
   </head>
   <body>
     <header>
+      <img
+        id="paw-logo"
+        src="https://cdn.glitch.global/13057105-4ab8-4616-b6da-d9ed582fe1ad/pawprintheart.png?v=1697227776576"
+        alt="Paw Print"
+      />
       <h1>Critter Care</h1>
       <img
         id="pug-pic"
@@ -22,7 +27,7 @@
       <form action="/create" method="POST">
         <input type="text" name="username" placeholder="username" />
         <input type="password" name="password" placeholder="password" />
-        <input type="submit" value="create" />
+        <input type="submit" value="Create account" />
       </form>
       <p id="createAccountFail"></p>
       <form action="/" method="GET">
